	
	- Fixed BUG#35489 - Prepared statements from pooled connections cause NPE when closed() under JDBC-4.0.
	
	- Added connection property "useLocalTransactionState" which configures if the driver use the in-transaction 
	  state provided by the MySQL protocol to determine if a commit() or rollback() should actually be sent to the database.
	  (disabled by default).
	  
03-06-08 - Version 5.1.6

    - JDBC-4.0-ized XAConnections and datasources.
    
    - Fixed BUG#31790 MysqlValidConnectionChecker 
      doesn't properly handle ReplicationConnection
    
    - Fixed Bug#20491 - DatabaseMetadata.getColumns() doesn't
      return correct column names if connection character set
      isn't UTF-8. (There was a server-side component of this that
      was fixed late in the 5.0 development cycle, it seems, this
      is the last piece that fixes some loose ends in the JDBC
      driver). This fix touches *all* metadata information coming
      from the MySQL server itself.
      
    - Fixed MysqlIO.nextRowFast() to only attempt to read server
      warning counts and status if talking to a 4.1 or newer server
      (fixes a hang when reading data from 4.0 servers).
      
    - Made profiler event handling extensible via the "profilerEventHandler"
      connection property.
      
    - Fixed Bug#31823 - CallableStatement.setNull() on a stored function would 
      throw an ArrayIndexOutOfBounds when setting the last parameter to null when calling setNull().

    - Added SSL-related configuration property "verifyServerCertificate". If set to "false", the driver won't verify 
      the server's certificate when "useSSL" is set to "true".
      
      When using this feature, the keystore parameters should be specified by the 
      "clientCertificateKeyStore*" properties, rather than system properties, as the JSSE doesn't
      make it straightforward to have a non-verifying trust store and the "default" key store.
      